Migrate usage of immutables to Kotlin data class (8)
Summary:
Part of a stack to migrate [Immutables](https://github.com/immutables/immutables) usage to Kotlin data classes.

My motivation is - I don't like compile-time generated code due to fragile IDE integration and discoverability, and I think Immutables codegen has no place in modern code today when we have language-level constructs for nice POJO-style objects.

Reviewed By: IanChilds

Differential Revision: D70209217

fbshipit-source-id: bda76d0cad78a0f9006c3632694e2348149b5e5f